--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "project",
+  "name": "appvendamais",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.76.0",
-    "tslib": "^2.8.1",
-    "vite": "^7.1.11"
+    "@supabase/supabase-js": "^2.45.0",
+    "vite": "^5.4.0"
   }
 }
