--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
+    "@supabase/supabase-js": "^2.45.0"
+  },
+  "devDependencies": {
     "vite": "^5.4.0"
   }
 }
