--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "appvendamais",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install": "echo 'Installing dependencies...'"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0"
+    "@supabase/supabase-js": "2.45.0"
   },
   "devDependencies": {
-    "vite": "^5.4.0"
+    "vite": "5.4.0"
   }
 }
