--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "install": "echo 'Installing dependencies...'"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "2.45.0"
